<resources>
    <string name="app_name">MyIntentApp</string>
    <string name="pindah_activity">Pindah Activity</string>
    <string name="pindah_activity_dengan_data">Pindah Activity dengan Data</string>
    <string name="dial_a_number">Dial a Number</string>
    <string name="pindah_activity_dengan_object">Pindah Activity dengan Object</string>
    <string name="pindah_aktivity_untuk_result">Pindah Aktivity untuk result</string>
    <string name="hasil">Hasil</string>
    <string name="pilih_angka_yang_kamu_suka">Pilih Angka Yang Kamu Suka</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_200">200</string>
    <string name="pilih">Pilih</string>
</resources>